@@ -1,6 +1,6 @@
 /* Fujitsu FRV opcode support, for GNU Binutils.  -*- C -*-
 
-   Copyright 2000, 2001, 2003, 2004 Free Software Foundation, Inc.
+   Copyright 2000, 2001, 2003, 2004, 2005 Free Software Foundation, Inc.
 
    Contributed by Red Hat Inc; developed under contract from Fujitsu.
 
@@ -948,7 +948,7 @@ spr_valid (regno)
 static const char * parse_ulo16
   PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
 static const char * parse_uslo16
-  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
+  PARAMS ((CGEN_CPU_DESC, const char **, int, signed long *));
 static const char * parse_uhi16
   PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
 static long parse_register_number
@@ -964,11 +964,11 @@ static const char * parse_u12
 static const char * parse_even_register
   PARAMS ((CGEN_CPU_DESC, const char **, CGEN_KEYWORD *, long *));
 static const char * parse_A0
-  PARAMS ((CGEN_CPU_DESC, const char **, int, long *));
+  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
 static const char * parse_A1
-  PARAMS ((CGEN_CPU_DESC, const char **, int, long *));
+  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *));
 static const char * parse_A
-  PARAMS ((CGEN_CPU_DESC, const char **, int, long *, long));
+  PARAMS ((CGEN_CPU_DESC, const char **, int, unsigned long *, long));
 
 inline static const char *
 parse_symbolic_address (CGEN_CPU_DESC cd,
@@ -997,7 +997,7 @@ static const char *
 parse_ldd_annotation (CGEN_CPU_DESC cd,
 		      const char **strp,
 		      int opindex,
-		      long *valuep)
+		      unsigned long *valuep)
 {
   const char *errmsg;
   enum cgen_parse_operand_result result_type;
@@ -1036,7 +1036,7 @@ static const char *
 parse_call_annotation (CGEN_CPU_DESC cd,
 		       const char **strp,
 		       int opindex,
-		       long *valuep)
+		       unsigned long *valuep)
 {
   const char *errmsg;
   enum cgen_parse_operand_result result_type;
@@ -1075,7 +1075,7 @@ static const char *
 parse_ld_annotation (CGEN_CPU_DESC cd,
 		     const char **strp,
 		     int opindex,
-		     long *valuep)
+		     unsigned long *valuep)
 {
   const char *errmsg;
   enum cgen_parse_operand_result result_type;
@@ -1234,7 +1234,7 @@ parse_ulo16 (cd, strp, opindex, valuep)
 	  return errmsg;
 	}
     }
-  return cgen_parse_signed_integer (cd, strp, opindex, valuep);
+  return cgen_parse_unsigned_integer (cd, strp, opindex, valuep);
 }
 
 static const char *
@@ -1242,7 +1242,7 @@ parse_uslo16 (cd, strp, opindex, valuep)
      CGEN_CPU_DESC cd;
      const char **strp;
      int opindex;
-     unsigned long *valuep;
+     signed long *valuep;
 {
   const char *errmsg;
   enum cgen_parse_operand_result result_type;
@@ -1361,7 +1361,7 @@ parse_uslo16 (cd, strp, opindex, valuep)
 	  return errmsg;
 	}
     }
-  return cgen_parse_unsigned_integer (cd, strp, opindex, valuep);
+  return cgen_parse_signed_integer (cd, strp, opindex, valuep);
 }
 
 static const char *
@@ -1820,7 +1820,7 @@ parse_A (cd, strp, opindex, valuep, A)
      CGEN_CPU_DESC cd;
      const char **strp;
      int opindex;
-     long *valuep;
+     unsigned long *valuep;
      long A;
 {
   const char *errmsg;
@@ -1843,7 +1843,7 @@ parse_A0 (cd, strp, opindex, valuep)
      CGEN_CPU_DESC cd;
      const char **strp;
      int opindex;
-     long *valuep;
+     unsigned long *valuep;
 {
   return parse_A (cd, strp, opindex, valuep, 0);
 }
@@ -1853,7 +1853,7 @@ parse_A1 (cd, strp, opindex, valuep)
      CGEN_CPU_DESC cd;
      const char **strp;
      int opindex;
-     long *valuep;
+     unsigned long *valuep;
 {
   return parse_A (cd, strp, opindex, valuep, 1);
 }
